# edge_inference

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
base/: detector.cpp  detector.hpp  engine.cpp  engine.h  engine.hpp  model.cpp  model.hpp
configs/: config.xml
engine/: base.cpp  base.h  engine.cpp  engineLite.h  engineRt.h  openVino.cpp  openVino.h  tensorRt.cpp  tensorRt.h  tfLite.cpp  tfLite.h
frameworks/: base.h  engineVino.h
frameworks/tflite/: engineLite.cpp  engineLite.h
libs/opencv/: opencv.cmake
libs/tensorflow_src/tensorflow/lite/FP16/: CMakeLists.txt
libs/tensorflow_src/tensorflow/lite/pthreadpool/: CMakeLists.txt
libs/tensorflow_src/tensorflow/lite/pthreadpool/FXdiv/: CMakeLists.txt
libs/tflite/: tflite.cmake
testBench/: testBench.cpp  testBench.h
tests/: CMakeLists.txt  tfliteEngine_test.cpp  tflite_test.cpp
utils/config/: config.cpp  config.h
utils/profiler/: profiler.cpp  profiler.h
